--- a/index.html
+++ b/index.html
@@ -5,11 +5,11 @@
 
   <meta charset='UTF-8'>
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <link rel="shortcut icon" href="img/website.ico">
-  <meta name="description" content="YourDescriptionHere">
-  <meta name="author" content="YourStudentID">
+  <link rel="shortcut icon" href="favicon (1).ico">
+  <meta name="job resume" content="To use for future job opportunities">
+  <meta name="author" content="862384174">
 
-  <title>John Doe - Business Administration</title>
+  <title>Camila Bracamontes - Sociology</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -27,9 +27,9 @@
 <body id="page-top">
   <nav class="navbar navbar-expand-lg navbar-dark bg-primary fixed-top" id="sideNav">
     <a class="navbar-brand js-scroll-trigger" href="#page-top">
-      <span class="d-block d-lg-none">John Doe</span>
+      <span class="d-block d-lg-none">Camila Bracamontes</span>
       <span class="d-none d-lg-block">
-        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/profilepicture.png" alt="Profile Picture">
+        <img class="img-fluid img-profile rounded-circle mx-auto mb-2" src="img/camilabracamontes.jpg" alt="Profile Picture">
       </span>
     </a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -58,26 +58,27 @@
 
     <section class="resume-section p-3 p-lg-5 d-flex align-items-center" id="about">
       <div class="w-100">
-        <h1 class="mb-3">John Doe
+        <h1 class="mb-3">Camila Bracamontes
         </h1>
-        <div class="subheading mb-5">Business Administration📚</div>
-        <p class="lead mb-4">Enter bio here<br><br>
+        <div class="subheading mb-5">Sociology 📚</div>
+        <p class="lead mb-4">My name is Camila Bracamontes and I am from beautiful San Diego, the prettiest city. I am a second year student and a sociology major. I started UCR my freshman year of the fall quarter in 2022. I attended high school in San Diego California in Mater Dei Catholic High School. After graduation I will attend veterinary school in Guadalajara, Mexico. After I attend and get my veterinary degree, I will work in my father’s veterinary hospital in Tijuana and save animals’ lives.  My hobbies consist of being outdoors. I am a person who loves to hangout with my friends. For physical activities, my favorite is to attend pilates classes with my friend Haniah. This has become a recent go-to of mine. After our weekly pilates class we go to the next door bagel place and grab a bagel with a latte. Then simply 10 minutes away is our favorite store Zara, where we love to window shop and try clothes on. However, if we aren’t feeling athletic, we have a book club, where we go to different coffee shops and read our book and chit chat about it. <br><br>
 
-        Enter bio here<br><br>
-
-        Enter bio here
+        I also love to go on walks, especially on a small island in San Diego called Coronado Island. This I love to do with my friend Miranda. We usually grab a coffee, chit chat, and walk around the huge houses on the island where we end up on the beach. Hiking is also an interest of mine, specially Ho Chi Min hiking trail also in San Diego. I love this hike as it’s only 3 miles long and takes you to a secluded beach only accessible via the trail. Going to brunch and dinner is a great interest of mine, which is usually with my friend Emiliano. We love to grab a quick bite and talk about everything for hours. We usually have more to talk about by the end of brunch or dinner so we love to follow with a coffee after. I have worked at a veterinary clinic as a receptionist for the past 2 years.<br><br>
+        
+        Starting as a receptionist during high school,, I quickly became an indispensable part of the veterinary clinic I joined. My role extended beyond the traditional front desk duties, as I adeptly managed appointments, greeted clients with a warm smile, and efficiently handled administrative tasks. My organizational skills and attention to detail proved instrumental in ensuring the smooth day-to-day operations of the clinic. Throughout the online year of 2021, I've had the privilege of serving as a remote tutor, guiding and inspiring students on their academic journeys. Working from the comfort of my home office, I've cultivated a unique and rewarding experience in the realm of online education. My role as a remote tutor involved collaborating with students across various subjects, tailoring my approach to meet individual learning styles and needs. Through virtual platforms, I facilitated engaging and interactive sessions, fostering a dynamic learning environment that transcended the limitations of physical distance. Thank you for your consideration.
+        
         </p>
         <div class="social-icons">
-          <a target="_blank" id="socialicon-1" href="https://linkedin.com">
+          <a target="_blank" id="socialicon-1" href="https://instagram.com/camilabracamontess">
             <i class="fab fa-linkedin-in"></i>
           </a>
-          <a target="_blank" id="socialicon-2" href="https://github.com">
+          <a target="_blank" id="socialicon-2" href="https://github.com/camilabraca">
             <i class="fab fa-github"></i>
           </a>
-          <a target="_blank" id="socialicon-3" href="https://twitter.com">
+          <a target="_blank" id="socialicon-3" href="https://twitter.com/camilabracaa">
             <i class="fab fa-twitter"></i>
           </a>
-          <a target="_blank" id="socialicon-4" href="mailto:youremail@gmail.com">
+          <a target="_blank" id="socialicon-4" href="mailto:rbrac005@ucr.edu">
             <i class="fa fa-envelope"></i>
           </a>
         </div>
@@ -92,12 +93,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Developer</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Company</a></div>
+            <h3 class="mb-0">Receptionist</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://yourcompany.com">Pet clinic</a></div>
             <p>
-              • Developed websites for company X<br> 
-              • Speaker at hack-a-thons<br>
-              • Experience with HTML, CSS, Javascript, Photoshop<br>
+              • Receptionist at Pet Clinic<br> 
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -107,11 +106,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Cashier</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Whole Foods</a></div>
+            <h3 class="mb-0">Church Leader</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://wholefoods.com">Shadow Mountain Church</a></div>
             <p>
-              • Responsible for checking out customers<br>
-              • etc etc<br>
+              • Leadership<br>
             </p>
           </div>
           <div class="resume-date text-md-right">
@@ -122,13 +120,10 @@
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 experience">
           <div class="resume-content">
-            <h3 class="mb-0">Teaching Assistant</h3>
-            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">University of California Riverside</a></div>
+            <h3 class="mb-0">Tutor</h3>
+            <div class="subheading mb-3"><a target="_blank" href="https://ucr.edu">Tutoring Chicago</a></div>
             <p>
-            • Ran sessions to help students learn how to code<br>
-            • Reviewed and graded student coding projects<br>
-            • Created educational content to help promote student education<br>
-            • TA'd for over 400 students each academic quarter<br>
+            • Tutor children<br>
 
           </p>
           </div>
@@ -152,22 +147,11 @@
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
           <div class="resume-content">
             <h3 class="mb-0">UC Riverside</h3>
-            <div class="subheading mb-3">Masters of Business Administration</div>
-            <div>MBA in International Business</div>
+            <div class="subheading mb-3">Bachelors in Sociology</div>
+            <div>Minor in Business</div>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">August 2018 - December 2019</span>
-          </div>
-        </div>
-
-        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5 education">
-          <div class="resume-content">
-            <h3 class="mb-0">University of California Riverside</h3>
-            <div class="subheading mb-3">Postgraduate Certificate in Business Management</div>
-            <div>Project Management</div>
-          </div>
-          <div class="resume-date text-md-right">
-            <span class="text-primary">June 2017</span>
+            <span class="text-primary">September 2022 - June 2026</span>
           </div>
         </div>
 
@@ -175,7 +159,7 @@
           <div class="resume-content">
             <h3 class="mb-0">University of California Riverside</h3>
             <div class="subheading mb-3">Business Administration</div>
-            <div>Information Systems</div>
+            <div>minor in buisness</div>
           </div>
           <div class="resume-date text-md-right">
             <span class="text-primary">August 2012 - May 2016</span>
@@ -191,7 +175,10 @@
       <div class="w-100">
         <h2 class="mb-5">Portfolio</h1>
         <center>
-            <img src="img/image2.jpeg" width="500px">
+            <img src="vet.jpeg" width="500px">
+            <img src="tutor.jpeg" width="500px"><br>
+            <img src="vets.jpeg" width="500px">
+            <img src="tutors.jpeg" width="500px"><br>
         </center>
       </div>
     </section>
@@ -199,7 +186,7 @@
     <hr class="m-0">
     <center>&copy; <script type="text/javascript">
   document.write(new Date().getFullYear());
-  </script> John Doe</center><br>
+  </script> Camila Bracamontes</center><br>
   </div>
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
